--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Contact Us - Croissant.com</title>
   </head>
   <body>
@@ -16,9 +16,9 @@
       for more info.
     </p>
     <footer>
-      <a href="index.html" title="Home">Homepage</a>
-      <a href="photo.html" title="Croissant photo">Photo</a>
-      <a href="contact.html" title="Contact Croissant.com">Contact</a>
+      <a href="/" title="Home"> Homepage</a>
+      <a href="/photo" title="Croissant photo"> Photo</a>
+      <a href="/contact" title="Contact Croissant.com"> Contact</a>
     </footer>
   </body>
 </html>
