--- a/photo.html
+++ b/photo.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Photo - Croissant</title>
   </head>
   <body>
     <h1>🥐 A Picture of a Croissant</h1>
     <img src="/img/Croissant.jpg" alt="croissant" class="croissant-photo" />
     <footer>
-      <a href="index.html" title="Home">Homepage</a>
-      <a href="photo.html" title="Croissant photo">Photo</a>
-      <a href="contact.html" title="Contact Croissant.com">Contact</a>
+      <a href="/" title="Home"> Homepage</a>
+      <a href="/photo" title="Croissant photo"> Photo</a>
+      <a href="/contact" title="Contact Croissant.com"> Contact</a>
     </footer>
   </body>
 </html>
