--- a/photo.html
+++ b/photo.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>🥐 A Picture of a Croissant</h1>
-    <img src="/img/Croissant.jpg" alt="croissant" class="croissant-photo" />
+    <img src="/image/Croissant.jpg" alt="croissant" class="croissant-photo" />
     <footer>
       <a href="/" title="Home"> Homepage</a>
       <a href="/photo" title="Croissant photo"> Photo</a>
