Added SEO friendly content to my Project

--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Photo - Croissant</title>
+    <title>
+      An example of what makes a perfect flaky Croissant - Croissant.com
+    </title>
+    <meta
+      name="description"
+      content="A perfect croissant is a golden, flaky pastry with a delicate, buttery flavor and an airy, melt-in-your-mouth texture"
+    />
   </head>
   <body>
     <h1>🥐 A Picture of a Croissant</h1>
