--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Contact Us - Croissant.com</title>
+    <meta
+      name="description"
+      content="Contact croissant.com to experience the Flaky Delight: Your Gateway to Perfectly Crafted Croissants"
+    />
   </head>
   <body>
     <h1>🥐 Contact Us</h1>
