--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Croissant</title>
+    <title>The most delecious flaky Croissant - Croissant.com</title>
+    <meta
+      name="description"
+      content="Flaky Perfection: The Art and Science of Baking the Perfect Croissant"
+    />
   </head>
   <body>
     <h1>🥐 Croissant</h1>
